# django-taggit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.txt  CHANGELOG.rst  CHANGELOG.txt  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  README.txt  manage.py  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
docs/: Makefile  admin.rst  admin.txt  api.rst  api.txt  changelog.txt  conf.py  contributing.txt  custom_tagging.rst  custom_tagging.txt  custom_through.txt  external_apps.rst  external_apps.txt  faq.rst  forms.rst  forms.txt  getting_started.rst  getting_started.txt  index.rst  index.txt  issues.txt  multiple_tags_relations.txt  serializers.rst  testing.rst
docs/_static/: README.txt
requirements/: docs.txt  pip_requirements.txt  test.txt
sample_taggit/: admin.py  asgi.py  make.bat  makefile  manage.py  models.py  settings.py  urls.py  views.py  wsgi.py
sample_taggit/fixtures/: 0001_users.json  0002_author.json  0003_book_type.json  0004_books.json  0005_tags.json  0006_condition_tags.json  0007_tags.json  0008_condition_tagged_item.json
sample_taggit/library_management/: abstract_models.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
sample_taggit/library_management/migrations/: 0001_initial.py
sample_taggit/library_management/templatetags/: custom_filters.py
sample_taggit/migrations/: 0001_initial.py
sample_taggit/temlates/: index.html
sample_taggit/templates/: index.html
taggit/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py  widgets.py
taggit/contrib/suggest/: README.txt  (+4 more)
taggit/migrations/: 0001_initial.py  0002_auto_20140917_1247.py  0002_auto_20150616_2121.py  0002_rename_to_non_int_object_id.py  0002_unique_tagnames.py  0003_auto_20191106_1655.py  0003_auto__add_index_tag_name.py  0003_rm_unique_tagname.py  0003_tag_state.py  0003_taggeditem_add_unique_index.py  0003_taggeditem_unique_together.py  0004_alter_taggeditem_content_type_alter_taggeditem_tag.py  0004_auto_20200204_1036.py  0004_taggeditem_add_unique_index.py  0005_auto_20200204_1049.py  0005_auto_20220424_2025.py  0006_rename_taggeditem_content_type_object_id_taggit_tagg_content_8fc721_idx.py  0006_taggit_index_together_deprecation.py  0007_alter_taggeditem_options.py  0007_taggeditem_created_at.py  __init__.py
taggit/services/: tag_merging.py
taggit/tests/: __init__.py  forms.py  models.py  runtests.py  settings.py  tests.py
tests/: admin.py  custom_parser.py  forms.py  models.py  serializers.py  settings.py  test_admin.py  test_deduplicate_tags.py  test_forms.py  test_models.py  test_remove_orphaned_tags.py  test_serializers.py  test_tag_merging.py  test_utils.py  tests.py  urls.py  views.py
tests/migrations/: 0001_initial.py  0002_auto_20150602_1730.py  0002_auto_20200214_1129.py  0002_submodelmanagerpet_submodelmanagerhousepet.py  0002_submodelmanagerpet_submodelmanegerhousepet.py  0002_uuid_models.py  0003_add_unique_indexes.py  0003_auto_20150602_1731.py  0003_auto_20210310_0918.py  0004_auto_20210619_0826.py  0005_auto_20210713_2301.py  0006_auto_20230622_0834.py  0007_alter_multiinheritancelazyresolutionfoodtag_tag_and_more.py  0008_alter_taggedtrackedpet_options.py
(+66 files in other folders)
