[metadata]
license-file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
# E501: line too long
ignore = E501
exclude =
    .tox
    docs

[isort]
combine_as_imports = True
force_grid_wrap = 0
forced_separate = taggit
include_trailing_comma = True
line_length = 88
multi_line_output = 3
not_skip = __init__.py
skip =
    .tox
