[metadata]
name = django-taggit
version = attr: taggit.__version__
description = django-taggit is a reusable Django application for simple tagging.
long_description = file: README.rst
author = Alex Gaynor
author_email = alex.gaynor@gmail.com
url = https://github.com/jazzband/django-taggit
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Documentation = https://django-taggit.readthedocs.io
    Source = https://github.com/jazzband/django-taggit
    Tracker = https://github.com/jazzband/django-taggit/issues

[options]
python_requires = >=3.9
packages = find:
install_requires = Django>=4.1
include_package_data = true
zip_safe = false

[options.packages.find]
exclude = tests*

[flake8]
# E501: line too long
ignore = E501
exclude = .venv,.git,.tox,.direnv

[isort]
profile = black
